nexis/versions/2024.2.0/readme.md
---
product: nexis
product-area: shared-storage
version: "2024.2.0"
release-date: 01/02/2024
doc-type: readme
source: pdf
confidentiality: public
date-added: 16/04/2026
status: current
---

® Avid NEXIS ReadMe Version 2024.2.0 Avid recommends that you read all the information in this ReadMe file thoroughly before installing software or attempting to use the Avid NEXIS system. This ReadMe provides information that is not in the other Avid NEXIS documentation. This ReadMe is cumulative for the 2024.x release stream.
This ReadMe provides hardware and software requirements, an overview of the major features of this release, and limitations and known issues. See the appropriate Avid NEXIS Setup Guide for information on physical connection of the system and loading the system and client software. You can access the documentation, including previous versions of the ReadMe, from the Avid NEXIS Knowledge Base.
> **Note:** For information about Avid’s security recommendations specific to Avid products, and our responses to
current world-wide security issues, see Avid Security Guidelines and Best Practices for Dealing with Virus Threats.
For compatibility with other Avid products, see the Knowledge Base page for Avid Audio and Video Compatibility Charts.
> **Note:** Avid recommends that you purchase installation services with your Avid NEXIS system.
Revision History Release Date Version Changes Contents Compatibility with Other Avid Products 10 Third Party Editor Compatibility 10 System Configuration Limits 10 System Performance (On-Premises) 12 Known Issues 16 Special Notes 21 Legal Notices 22 Accessing the Online Documentation The Avid NEXIS documentation is accessible in PDF format from the Avid NEXIS Knowledge Base.
If You Need Help If you are having trouble using your Avid product:
1. Retry the action, carefully following the instructions given for that task in this guide. It is especially
important to check each step of your workflow.
If you encounter a problem with the file system after an upgrade, and rebooting the system (or initiating a Controller switchover) once does not resolve the problem, open a case with Avid Customer Success. Repeatedly rebooting the system or performing multiple Controller switchovers can cause more serious issues.
2. Check the documentation that came with your Avid application or your hardware for maintenance or
hardware-related issues.
3. Visit the online Knowledge Base at avid.com/learn-and-support. Online services are available 24
hours per day, 7 days per week. Search this online Knowledge Base to find answers, to view error messages, to access troubleshooting tips, to download updates, and to read or join online message- board discussions.
Avid Training Services Avid makes lifelong learning, career advancement, and personal development easy and convenient. Avid understands that the knowledge you need to differentiate yourself is always changing, and Avid continually updates course content and offers new training delivery methods that accommodate your pressured and competitive work environment.
Avid NEXIS Enterprise customers can access online training from the following URL: How to Activate Avid NEXIS Enterprise Training For information on courses/schedules, training centers, certifications, courseware, and books, please visit www.avid.com/US/support and follow the Training links, or call Avid Sales at 800-949-AVID (800-949-2843).
Recommended and Required Releases The newest release is always recommended. The following Avid NEXIS | FS releases are either recommended or required in the cases listed below.
g Avid NEXIS versions 2021.x and 2022.x are no longer recommended for new installations. Avid NEXIS versions 2020 and older are no longer supported.
According to Avid’s Customer Support Contract Terms and Conditions, customers are required to upgrade regularly to benefit from fixes and stability enhancements. It is important to keep the Avid NEXIS infrastructure on a recent release, therefore all customers must plan to upgrade at least once per year to a recommended release from the table below. Avid NEXIS Server and Clients can be upgraded without forcing an upgrade to other Avid and third party devices. See here for Avid Supported Software Releases (and end of support dates): Link to Avid Supported Software Releases
> **Note:** An Avid NEXIS system (server) can be updated before the clients to allow server-only fixes to be
deployed faster. We recommend upgrading clients as soon as possible thereafter.
Avid NEXIS System (Server) and Client Releases Product Version Guidance Server and 2024.2.0 Recommended all Avid NEXIS systems (on-premises and Cloud).
Clients Required for macOS Sonoma (Avid NEXIS Client version 2024.2.0) Server and 2023.12.0 Strongly recommended minimum version for Pro Tools and Avid NEXIS in Clients audio workflows and all F2 SSD engines.
Recommended for all Avid NEXIS | EDGE sites See "What’s New in Avid NEXIS 2023.12" on page 1.
Windows 2023.8.3 Minimum required version for all installations using Crowdstrike. See "What’s Clients only New in Avid NEXIS 2023.8.3" on page 1.
Server and 2023.8.x Support for 175M files on SDA+ and 5M on Avid NEXIS PRO+ Clients Required minimum revision for Modular licenses Required minimum for all Avid NEXIS | EDGE sites See "What’s New in Avid NEXIS 2023.8.2" on page 1.
Server and 2023.3.0 Introduced Avid NEXIS | F2 SSD.
Clients See "What's New in Avid NEXIS Version 2023.3.0" on page 1 for more information.
Last supported version for customers using Avid NEXIS | Cloudspaces-- do not upgrade to any newer version Server and 2022.12.0 Minimum recommended version for all Avid NEXIS systems (E-series and F- Clients Series) Avid NEXIS Version Downgrades Installing an older software version on Avid NEXIS systems is not supported and can result in unforeseen consequences, up to and including data loss.
What’s New in Avid NEXIS 2024.2.0 Avid NEXIS version 2024.2.0 is a major release that supports the following:
- Network bonding for Linux clients
- Avid NEXIS | Cloud Storage system support for 330 clients
- Support for macOS Sonoma (14) on Avid NEXIS clients
Network bonding for Linux clients This release includes qualification for network bonding of Linux clients running FastServe with Avid NEXIS.
Mode 1 bonding is identified as ethTeaming in the FastServe interface. For more information, see the https://kb.avid.com/articles/en_US/Knowledge/FastServe-Documentation, or the Administrator’s Guide for the FastServe product of interest, such as FastServe Ingest or FastServe Playout.
Avid NEXIS | Cloud Storage system support for 330 Simultaneous (Active) Clients This release increases the number of clients that can be connected to an Avid NEXIS | Cloud Storage system at the same time, all of which are active. See "Cloud System Limits" on page 12 for more information.
Support for macOS Sonoma (14) with 1GbE Network Adapters Avid NEXIS version 2024.2.0 introduces support for clients running macOS 14 (Sonoma) and using 1GbE network adapters on Apple mac computers with the M1, M2, M3, or Intel chip.
Change to Client Manager UI for CentOS Due to a code base update in the Avid NEXIS Client Manager, the CentOS kit no longer supports opening the Management Console for a connected Avid NEXIS system. For CentOS clients only, the Client Manager UI no longer includes that button.
Server Fixes
- SSENG-34814 and SSENG-38562 Avid NEXIS F-Series systems took a long time to report hardware
failures and other problems.
SSENG-38914 and SSENG-39241 After an upgrade to version 2023.12.0, an Avid NEXIS system sent
- out excessive email notifications about the upcoming license expiration and some informational
license logging messages.
Client Fixes
- SSENG-39081 After upgrading a client to version 2023.12.0, when a user selected multiple items in a
Workspace using Windows Explorer and right-clicked to perform a menu action the Explorer window abruptly closed.
USM Versions (USM1) The Unified System Management firmware package is a bundle of firmware for the hardware components in an Avid NEXIS, such as the power supply units, Controllers, and the Baseboard Management (BMC2).
Controller USM upgrades are currently performed remotely by Avid. Contact Avid Global Customer Services for details. Some USM firmware versions are supported only with certain Avid NEXIS versions and models; see the following tables for details.
Avid NEXIS F-Series USM and BMC Versions USM BMC Minimum Avid NEXIS Supported Models Version v5.2-r2020.40.12_rc1_rel_3353 00.54 2024.2.0 Avid NEXIS F-Series, Avid NEXIS | SDA+, Avid NEXIS | PRO+ 5.2_r2020.40.8_RC5_Rel-3096 00.52 2023.3.0 Avid NEXIS F-Series, Avid NEXIS | SDA+, Avid NEXIS | PRO+ 5.2_r2020.40.6_v02 00.45 2022.5.0 Avid NEXIS F-Series, Avid NEXIS | SDA+, (Displays as “BON” in the Avid NEXIS | PRO+ Management Console) Avid NEXIS E-Series (Legacy) USM and BMC Versions (Corrected July 2023) USM BMC Minimum Avid Supported Models NEXIS Version 1.37B 0.01.0045 2022.12.0 Avid NEXIS E-series, Avid NEXIS | PRO 40TB with Controller 10, Avid NEXIS | SDA
> **Note:** Dual Controllers in the same chassis must run the
same USM version.
1.37a 0.01.0041 2019.2.0 Avid NEXIS E-series, Avid NEXIS | PRO 40TB with Controller 10 1.37 0.01.003c 2019.2.0 n Can use USM 1.37 and 1.37a in the same Engine for models that support dual controllers 4.1.16g 2.00.1093c 2019.2.0 Avid NEXIS | PRO 20TB , Avid NEXIS | PRO 40TB with purple fascia Controller 4.1.16d 2.0.0002 1.32 0.01.0034 7.9.1 Legacy Avid NEXIS E-series 1.16 0.01.0013 6.x Legacy Avid NEXIS E-series 1USM versions are shown on the Engines page and the Controllers page in the Management Console.
2BMC versions are shown on the Controllers page in the Management Console.
Updated Security Guidelines As system and network security attacks become increasingly more inventive and persistent, Avid is adopting a new security strategy to help you, our customer and partner, better protect your assets and intellectual property. As you might know, Avid has traditionally recommended Symantec Endpoint Protection as the preferred and qualified solution for much of the Avid product line. As of Q3, 2020, Avid is introducing a more flexible strategy that provides general guidelines for protecting your Avid systems. This new policy allows you to choose the best security solution for your organization, while still following Avid best practices. For more information, see Avid Security Guidelines and Best Practices for Dealing with Virus Threats.
Secure Data Deletion For customers who require a guarantee that all deleted data is done so completely and securely (after deleting a Workspace), see the following URL for Secure Data Deletion tools available from Seagate, officially supported by Avid NEXIS: https://www.seagate.com/support/secure-erase-matrix/ Hardware and Software Requirements To meet the stringent needs of media applications the Avid NEXIS family of storage solutions is built using patented intellectual property in Avid NEXIS software running on Avid NEXIS hardware. Avid tests and qualifies configurations of Avid NEXIS software deployed on Avid NEXIS hardware. The Avid NEXIS System Director is designed to allow the binding of Avid NEXIS only. Avid has not published its file system specifications, protocols, or file system APIs used among the components of the file system (Avid NEXIS System Director, Avid NEXIS client, Avid NEXIS expansion engines) and these are subject to change without notice. Therefore, any connection of third party storage as part of an Avid NEXIS file system is not a licensed, approved or supported configuration.
Supported Upgrade Paths You can upgrade any Avid NEXIS system according to the upgrade path described next. For instructions on how to upgrade an Engine or System Director Appliance, see the Avid NEXIS Setup and Maintenance Guide, or the Avid NEXIS Administration Guide.
All Avid NEXIS systems can upgrade to the following versions.
Current Avid NEXIS Version Can Upgrade Directly To On-premises systems 6.x, 7.x, 2018.x, 2019.x, 2024.2.0 2020.x, 2021.x, 2022.x, 2023.x Do not upgrade any on-premises system to 2023.7.0.
Do not upgrade any system that has or has previously had Avid NEXIS | Cloudspaces to 2023.8.0 or higher.
Avid NEXIS | Cloud 2021.3.1 and newer 2024.2.0 Storage systems To upgrade Avid NEXIS | Cloud c Do not upgrade any Avid NEXIS Cloud Storage Storage 2020.7.x and earlier system to 2023.7.0 or 2023.8.0.
to Avid NEXIS | FS version 2021.x, please contact Avid Customer Service or your sales representative to assist with the upgrade.
System Director and Client Version Compatibility Since Avid NEXIS v2019.2, the Shared Storage system can have a newer version than the client to allow deployment of server-only fixes. Avid recommends upgrading all clients to the same version as soon as practical.
Avid NEXIS Client software version 2019.x and newer works with Avid NEXIS systems running 2019.x and newer.
> **Note:** The Avid NEXIS Toolbox and other utilities are tested and known to work only against a System Director
of the same version. If you want to install two different versions of the Toolbox on the same system, install one of them into a directory other than the default.
Supported Client Operating Systems The following table lists the currently supported client operating systems with Avid NEXIS. All of the listed client operating systems support single or dual 10Gb Ethernet network interface cards.
All client computer names must be unique to connect to Avid NEXIS. A client computer name is treated as a user name, and all user names on a shared-storage system must be unique.
Operating Supported Versions Notes System macOS 14 (Sonoma) with latest updates for Silicon n macOS clients are not supported with M1 and M2 computers with 1GbE NICs.
Avid NEXIS | Cloud Storage systems.
13.x (Ventura) with latest updates 12.x (Monterey) with latest updates 11.x (Big Sur) with latest updates CentOS 7.9, 7.8, 7.7, 7.6 General Avid NEXIS Client use 7.5, kernel 4.4.174-1.el7 Supported only on MediaCentral | Cloud UX systems running CentOS 7.5 7.5, kernel 3.10.0-862.el7.x86_64 See the Avid Audio and Video Compatibility Charts on the Avid Knowledge Base page for more information on compatibility.
7.4, kernel version 3.10.0-693.17 Specifically for use with AutoDesk Flame 2021; also see "Hardware and Software Requirements" on the previous page.
Ubuntu 22.04 To migrate MediaCentral | Cloud UX systems from CentOS to Ubuntu, see the MediaCentral Cloud UX Documentation.
See "Ubuntu Client and MediaCentral Compatibility" on the next page Windows 11 build 22H2 11 build 21H2 See "Windows 10 Issues" on page 19.
10 build 22H2 Windows Server 2022 with latest Service Pack Operating Supported Versions Notes System 2019 with latest Service Pack Ubuntu Client and MediaCentral Compatibility Avid NEXIS version 2023.3.0 was the first release to support Ubuntu for clients, intended to accommodate the move of MediaCentral | Cloud UX from CentOS to Ubuntu Linux. Performance was limited to 1Gb/s regardless of the physical connection, which was consistent with previous versions but slower than optimal.
With Avid NEXIS 2023.8.0 and higher, the Ubuntu client performance improved to allow higher throughput on a 10Gb/s connection by using the Avid NEXIS client cache instead of the Ubuntu page cache. However, versions of MediaCentral | Cloud UX earlier than 2023.7 were not able to take advantage of this change in cache use, resulting in images under construction remaining in the MediaCentral server’s page cache without updating. Stale content remained available and clips were seen to remain indefinitely under construction, even after being finalized. The clips remained in the Creating folder and incorrectly appeared as offline.
Refer to the following chart for version compatibility and performance guidance between the Avid NEXIS client and MediaCentral | Cloud UX versions.
MediaCentral | Cloud UX Server version Avid NEXIS Client version 2023.3 2023.7 2023.12 2024.x 2023.3 Y SLOW PERFORMANCE (~1Gb/s) 2023.8 N Y Y Y 2023.12 N Y Y Y 2024.x N Y Y Y CentOS Version Compatibility with Avid NEXIS Client and VFS Gateway Versions The following versions of CentOS support the specified versions of the Avid NEXIS Client software and the Avid NEXIS | VFS Gateway (formerly Avid NEXIS | Linux File Gateway) software.
On a given CentOS VM version, you can run any of the following versions of the Client and Gateway.
CentOS Version Supported Avid NEXIS Client and VFS Gateway Versions 7.9 2022.9.0 and higher 7.8 2021.3.x through 2022.5.x (inclusive) 7.5 2019.12.0 through 2021.3.x (inclusive) Supported Browsers in an Avid NEXIS The following browsers are qualified for the current Avid NEXIS release stream. These browsers were qualified with the client operating systems supported in the current release.
Operating System Supported Browsers Windows Microsoft Edge, Mozilla Firefox, Google Chrome macOS Apple Safari, Mozilla Firefox, Google Chrome Compatibility with Other Avid Products This Avid NEXIS version is broadly compatible with other Avid and third-party products.
The full compatibility matrix of Avid editors and hardware is available on the Avid support site at the following URL: Avid Audio and Video Compatibility Charts Third Party Editor Compatibility Avid NEXIS Workspaces are optimized for Media and Entertainment workflows and can be successfully used with most industry standard editing, finishing, compositing, grading and animation applications, including but not limited to:
Adobe® After Effects®
- Adobe® Premiere® Pro
- Apple Final Cut®1
- Autodesk Flame®2
- Autodesk Maya®
- Blackmagic Design DaVinci Resolve
- Foundry Nuke®
- Grass Valley® EDIUS® Pro
- Maxon Cinema 4D®
- System Configuration Limits
The following tables list the configuration limits for on-premises and Avid NEXIS | Cloud Storage systems in the current release.
On-Premises Limits Item Embedded System Director System Director Appliance Media Packs (per 4, in any combination of Scale-Out and 8 in a High Performance Storage Group system) High Performance 24 total (optionally including up to 8 in a High Performance Storage Group) with the Avid NEXIS | VFS Standard or Avid NEXIS | FS Standard license and any combination of Avid NEXIS Engines 64 total (optionally including up to 8 in a High Performance Storage Group) with the Avid NEXIS | VFS Advanced or Avid NEXIS | FS Advanced license, and any combination of Avid NEXIS Engines Media Packs (per 1 in all 2U chassis (Avid NEXIS | E2, Avid NEXIS | E2 All-Mirror, Avid NEXIS | E2 SSD, Avid Engine) NEXIS | PRO, Avid NEXIS | F2, Avid NEXIS | F2X, Avid NEXIS | PRO+) 1-2 in Avid NEXIS | F2 SSD 1–2 in all 4U chassis (Avid NEXIS | E4, Avid NEXIS | E4 All-Mirror) As of Final Cut Pro X10.4, you can store library files on Avid NEXIS instead of on local drives.
You must use the CentOS 7.4 kernel specified by Autodesk based on the Flame version you intend to use for connecting to Avid NEXIS.
Item Embedded System Director System Director Appliance 4–8 in all 5U chassis (Avid NEXIS | E5, Avid NEXIS | E5 NL, Avid NEXIS | E5 All-Mirror, Avid NEXIS | F5, Avid NEXIS | F5 NL) Storage Groups 4, optionally including one High 32, optionally including one High Performance Storage Group Performance Storage Group Workspaces 1024 (including Workspaces for Teams) 3072 (including Workspaces for Teams) Teams 19 80 Team Quotas Up to 255 Team Quotas per system (Teams have only one quota per Storage Group — which can be increased or decreased — but can have a quota in multiple Storage Groups) Team Admin Users No enforced limit Users (Clients) 5640 (including Users in Teams) User Groups 1028 (including User Groups in Teams) Group Non-Team users can belong to 71 non-Team user groups Memberships per Team users can belong to 71 user groups in the same Team User Connected (Active) 40 with Avid NEXIS E-Series/F-Series 165 with Avid NEXIS | VFS Standard or Avid Clients Engines NEXIS | FS Standard license 30 with Avid NEXIS | PRO or Avid NEXIS | 330 with Avid NEXIS | VFS Advanced or Avid PRO+ NEXIS | FS Advanced license Up to 10 to a High Performance Storage Group (Avid strongly recommends no more than 10) Files and Folders 8 million in Avid NEXIS E-series/F-Series 175 million in configurations with an Avid configurations NEXIS | SDA+ and the Avid NEXIS | FS Advanced license running Avid NEXIS 5 million in configurations where the version 2023.8.0 or higher System Director service runs on an Avid NEXIS | PRO+ 28.4 million in configurations with an Avid NEXIS | SDA or Avid NEXIS | SDA+ with the 3 million in configurations where the Avid NEXIS | FS Standard license.
System Director service runs on Avid NEXIS | PRO n Actual limit depends on file name length. Limit assumes 67 ASCII
> **Note:** Actual limit depends on file name
characters (67 bytes). Longer average length. Limit assumes 67 ASCII file names reduce the file count limit.
characters (67 bytes). Longer average file names reduce the file count limit.
Files per folder Avid recommends no more than 5000 files per folder in Workspaces.
Pathnames Any component of the path can be up to 255 bytes. Depending on the client operating system the full path limit is:
(Workspace name + path + file name) l Windows: 32KiB
- macOS: 32KiB
- Ubuntu: 4KiB
> **Note:** Unicode characters can be multi-byte.
Cloud System Limits Avid NEXIS uses UDP datagrams for control traffic. Networks supporting Avid NEXIS must allow fragmented UDP traffic and minimize reordering of fragments because operating systems reject out- of-order fragments.
Item Limit Media Packs (per system) 1 (2PB capacity) Workspaces 3072 Teams 80 Workspaces, users, and groups created by a Team count against the overall system limits.
Team Quotas Up to 255 Team Quotas per system (Teams have only one quota per Storage Group — which can be increased or decreased — but can have a quota in multiple Storage Groups) Team Admin Users No enforced limit Users (Clients) 5640 (including Users in Teams) User Groups 1028 (including User Groups in Teams) Group Memberships per User Non-Team users can belong to 15 non-Team user groups Team users can belong to 15 user groups in the same Team Connected (Active) Clients 330 simultaneously editing Bandwidth of 1-2 streams of ~100Mbps.
Files and Folders 28.4 million
> **Note:** Actual limit depends on file name length. Limit assumes 67 ASCII characters
(67 bytes). Longer average file names reduce the file count limit.
Files per folder Avid recommends no more than 10,000 files per folder, particularly for Workspaces used by Avid MediaCentral | Production Management (formerly Avid Interplay | Production).
Pathnames Total bytes = 255 (Workspace name + path + filename)
> **Note:** Unicode characters can be multi-byte.
System Performance (On-Premises) This section describes the bandwidth for the different Media Pack bind options, and the aggregate throughput for Storage Groups using those Media Packs.
Bandwidth by Media Pack Bind Setting The nominal bandwidth rating for all-read workflows depends on the Engine type and Media Pack Bind Setting, as follows:
Bind Option Bandwidth Rating (Nominal) Supported On Scale Out 480MB/sec Avid NEXIS | PRO+ Avid NEXIS | F2, Avid NEXIS | F2X, Avid NEXIS | F5 High Performance 700MB/sec Avid NEXIS | PRO+ Avid NEXIS | F2, Avid NEXIS | F2X SSD, 1 Media Pack All Reads: 4GB/sec Avid NEXIS | F2 SSD only All Writes: 2GB/sec GB/sec Write SSD, 2 Media All Reads: 8GB/sec Packs All Writes: 4GB/sec 50/50 reads/writes: 4GB/sec Read, 2GB/sec Write Aggregate Bandwidth by Media Pack Protection Type The actual write bandwidth depends on protection type. Aggregate bandwidth is therefore a function of protection type and the proportion of reads to writes in the workflow.
> **Note:** In a mixed configuration of Avid NEXIS E-series and Avid NEXIS F-Series Engines in a Storage Group, the
throughput will be between the ratings for an all E-series or all F-series system.
The following tables provide data on the expected bandwidth for Avid NEXIS F-Series Engines (including Avid NEXIS | PRO+ ) as an aggregate of all the Media Packs in a given Engine by protection type and R/W proportion per Media Pack.
To calculate total system performance, multiply these figures by the number of Media Packs in the Storage Group. A typical workflow is 80% reads and 20% writes.
Scale-Out Performance Scale-Out performance is available on all models except Avid NEXIS | F5 NL. Scale-Out is the best choice for Media Mirroring (not supported on Avid NEXIS | F5 NL or Avid NEXIS | PRO+).
Media Pack Protection MP Protection and Engine Protection Read% Write% None One Two Disk One Disk + Two Disk + Disk Mirroring Mirroring 100 0 480 MB/sec 480 480 480 480 90 10 480 474 468 427 417 80 20 480 468 457 384 369 70 30 480 463 447 349 331 60 40 480 457 436 320 300 50 50 480 452 427 295 274 Usable Storage 100% 89% 80% 44% 40% High Performance High Performance is available on Avid NEXIS | PRO+, Avid NEXIS | F2 and Avid NEXIS | F2X. Media Mirroring is not supported with High Performance Storage Groups.
Media Pack Protection MP Protection and Engine Protection Read% Write% None One Two Disk One Disk + Two Disk + Disk Mirroring Mirroring 100 0 700 MB/sec 700 700 NA NA 90 10 700 691 683 NA NA 80 20 700 683 667 NA NA 70 30 700 675 651 NA NA 60 40 700 667 636 NA NA 50 50 700 659 622 NA NA Usable Storage 100% 89% 80% NA NA SSD Performance Updated values April 2023 SSD Performance is the only bind option available on Avid NEXIS | F2 SSD Engines. Media Mirroring is not supported for Avid NEXIS | F2 SSD Engines.
Media Pack Protection Read% Write% One Disk Two Disk 100 0 4000 4000 90 10 3822 3800 80 20 3644 3600 70 30 3467 3400 60 40 3289 3200 50 50 3111 3000 Usable Storage 89% 80% Drive Rebuilds and System Performance Updated SSD values April 2023 When a drive in a Media Pack fails, the data from that drive is rebuilt from the other drives in that Media Pack, and involves only those drives. During a rebuild, the Media Pack’s performance rating drops by the rating of one drive (10%). With no I/O on the system, the fastest a drive can be rebuilt is also equal to the rating of one drive.
On a Media Pack that is under full load (at complete bandwidth capacity), the minimum repair rate is 512KB/s. As the drive is rebuilt it begins contributing to the overall Media Pack performance rate for both reads and writes, so during the rebuild, the rate gradually decreases.
Performance Type Rebuild Rate (Media Pack at 100% capacity) Drive Size Estimated Rebuild Time Scale-Out 48MB/sec 4TB 24 hours 0.17TB/hr or ~6hr/TB 6TB 36 hours 10TB 60 hours 14TB 84 hours 16TB 96 hours High 70MB/sec 4TB 16 hours 6TB 24 hours 0.25TB/hour, or ~4 hr/TB 10TB 40 hours 14TB 56 hours SSD 700MB/sec 3.48TB ~1.3 hours 2.52TB/hour, or ~24 min/TB 15.3TB ~6 hours
> **Note:** 16TB drives are available for Avid NEXIS | F5 NL only.
The rebuild time increases with client load, and decreases as less data remains to be rebuilt.
Workspaces with One-Disk Protection are rebuilt before Workspaces with Two-Disk Protection, due to their higher vulnerability to a second drive failure.
Media Mirroring and System Performance Mirrored Workspaces allow Avid NEXIS clients to continue working through an Engine failure without interruption or needing to reconnect. To ensure all clients can work seamlessly through an Engine failure, provision the shared-storage system with enough bandwidth to account for an Engine being offline.
Known Issues The following are known issues with Avid NEXIS software or third-party vendors.
Avid NEXIS On-Premises Systems Issues Issue Number SSENG-37053: After updating an Avid NEXIS system to version 2023.7.0, some of the Controllers reported a Firmware Mismatch issue, and indicated that the USM version on the Controller was invalid. The mismatch is caused by extended firmware version checking in 2023.7.0 and does not necessarily indicate a problem.
Workaround:You can either ignore this message (it will clear on its own after about 24 hours) or reboot the Engine.
Issue Number (None): In the Management Console running Engine mode, the field labeled Storage System Name is incorrect. The value shown is the Engine name. (Engine mode is used only to activate a Modular License on a single Engine.) This will be fixed in a future release.
Issue Number SSENG-36438: If you attempt to bind a Media Pack immediately after unbinding it (for example, to change the bind performance from Scale-Out to High), the system might show an error about inadequate capacity on the license.
Workaround:After unbinding a Media Pack, wait a few minutes before attempting to bind it again. This allows the system to complete its internal status updates.
Issue Number SSENGHW-122, SSENGHW-123, SSENGHW-124: On Avid NEXIS | PRO+, and any Avid NEXIS F- Series with a single Controller, the amber Module Fault LED on the Controller remains lit, which normally indicates an error condition. However if the system reports no errors on the Dashboard and is functioning normally, you can disregard this LED state. This problem has been traced to an internal firmware issue and the fix will be in a later release.
Issue Number SSENG-31657 : When configuring an Avid NEXIS F-Series Engine (including Avid NEXIS | PRO+ and Avid NEXIS | SDA+ using the Agent for initial setup, the enclosure ID does not remain set, and continues to display the factory default of 00.
Workaround: Turn all of the power supplies off, then back on, on each Engine after updating the enclosure ID.
Issue Number (None): When looking at switch statistics (for Dell and NETGEAR switches), you might see the OutDiscard counter (on Dell switches) or the Transmit Packets Discarded counter (on the NETGEAR switch) incrementing. This is acceptable as long as the rate of discards is no more than 1% of the total packets transmitted, or as long as workflows are not experiencing any dropped frames.
Issue Number (None): Avid recommends avoiding the use of object names that include a pound sign (#) followed by numeric characters. The Macintosh Finder might incorrectly display the contents of folders whose name includes that sequence of characters. For example, “project # 12” might be erroneously displayed with some items duplicated and some items missing.
See the Avid NEXIS Administration Guide for more information on supported and unsupported characters and other restrictions.
Avid NEXIS | Cloud Storage Issues Issue Number SSENG-36923: You might see an error about the license directory being unavailable when trying to activate a license on a newly deployed Avid NEXIS | Cloud Storage system.
Workaround: Restart the Avid NEXIS | Cloud Storage system and try activating the license again.
Issue Number (None): You might run into issues running clients with multiple NICs, each of which is able to connect to an Avid NEXIS | Cloud Storage system.
Workaround: In clients that are specifically connecting to Avid NEXIS | Cloud Storage, enable only one NIC.
Avid NEXIS VFS Gateway Issues Avid NEXIS | VFS Gateway was introduced (as Avid NEXIS | Linux File Gateway) with Avid NEXIS version 2019.12.0. The utility was renamed in version 2022.9.0.
Issue Number (None): The keyboard actions to select multiple items (using the Shift or Control keys) do not work.
Issue Number SSENG-36654: The VFS Gateway tool cannot process Active Directory Groups or Users with wildcard characters in the Organizational Unit string (for example, OU=*Groups). Groups with special characters or wildcards can return unexpected results or no results at all.
Avid NEXIS Client Issues When a workaround exists, it appears in the paragraph directly following the issue description.
> **Note:** A user account with Administrator privileges is required to install the Avid NEXIS client software on your
workstations.
Issue Number SSENG-29506, SSENG-31340: Avid is aware of an issue with intermittent communication, often during system discovery, between an Avid NEXIS and clients running on certain configurations of VMware host systems. For more information, see the following articles:
- Recommended VMware Versions and Settings (Avid Knowledge Base)
- Network timeouts or packet drops with VMware Tools 11.x with Guest Introspection Driver (79185)
(VMware Knowledge Base) Issue Number SSENG-33268: Do not use the Remote Avid NEXIS setting in the Client Manager when on site with the target Avid NEXIS system. This setting is designed for remote connections, especially with the upcoming Avid NEXIS | EDGE collaboration tool. The Remote Avid NEXIS setting supports proxy workflows and push/pull file copying, but is not supported for on-premises or high resolution workflows. For all on- premises workflows, use the local, physical network and gateway connection.
Issue Number (None): If you mount a workspace by mapping a network drive in Windows, when you unmount the workspace and then mount a different workspace in Client Manager manually using the same drive letter, Windows Explorer displays the previous workspace name instead of the new workspace name.
Issue Number (None): The estimated amount of space available (usually measured in an amount of time at a particular resolution) might differ between what Avid NEXIS calculates and what the Avid editing system calculates. Avid NEXIS accurately reports the amount of space available for file storage. The Avid editing application accounts for overhead in formatting of the media and is more conservative in reporting how much space is available.
Issue Number (None): The Avid NEXIS Log Utility may occasionally fail to generate logs with the error message “Couldn’t find OAM logs”.
Workaround: Close the error message and generate the logs again.
Issue Number (None): If the Client Manager is connected to an Avid NEXIS system with dual controllers and the System Director service has switched over to the second controller, the Management Console launch button in the Client Manager does not redirect to the new System Director and cannot successfully open the Management Console.
Workaround: To launch the Management Console for an Avid NEXIS system, either open a browser and enter its IP address, or add the IP address of the redundant controller to the Remote Hosts list in the Client Manager.
Issue Number (None): On a client with multiple NICs, all network paths from the client to a particular Avid NEXIS must be via NICs with the same speed.
Mac Platforms and macOS Issues Issue Number SSENG-39619: Customized macOS folder icons are not supported in the Avid NEXIS file system.
Issue Number: None. Avid NEXIS does not by default support using Spotlight search on Workspaces, and does not recommend using it.
Issue Number SSENG-23026, Updated August 2021: Avid Benchmark Utility does not work automatically on Avid NEXIS clients running macOS 11.x (Big Sur) and newer. On these clients, you must explicitly allow permission for an application (including Avid Benchmark Utility) to have Full Disk Access.
Workaround: On the macOS client, click System Preferences > Security & Privacy > Privacy > Full Disk Access avidbenchmarkd.
and check the box for You might need to provide Administrator credentials to unlock this function (Padlock icon).
If the avidbenchmarkd object is not shown in the list, run a test with the Benchmark Utility against the client; the test will fail, but running it causes the avidbenchmarkd object to appear in the list.
Issue Number (None): If Macintosh files are copied to a Windows system with the Macintosh resource fork files, the resource fork files cannot be copied to mounted workspaces from a Windows client. Avid NEXIS does not accept Macintosh resource fork files from Windows clients. Appropriate “properties” error messages are displayed if this is attempted.
Issue Number (None): If the Avid NEXIS Client software is installed accidentally on an unsupported macOS version, running the uninstaller does not work.
Workaround: Use AppCleaner (a free download) to uninstall the Avid NEXIS Client software, as follows:
1. Download AppCleaner from: http://www.freemacsoft.net/appcleaner/
2. Follow the instructions for removing an application (in this case, Avid NEXIS Client).
3. Restart the Mac.
CentOS Issues Issue Number (None): Avid recommends not using the Development and Creative Workstation option when deploying CentOS 7.8 on an Avid NEXIS Client system as it can create a dependency conflict for packages required to install Avid NEXIS Client software. For existing CentOS clients, when upgrading the Avid NEXIS Client, if the installation fails with specific FUSE library conflicts, remove the existing FUSE libraries and retry the Avid NEXIS Client installation. Using the Development and Creative Workstation option can also create conflicts in port usage for Avid Benchmark Agent. If the ports are already in use, reboot the client to free up the ports.
Issue Number (None): CentOS clients using the GUI can experience a delay in seeing all files when browsing contents of Cloudspaces with more than a few thousand files. Browsing Cloudspaces files using the terminal avoids the delay.
Ubuntu Issues Issue Number (None): If your MediaCentral Cloud UX server is attached to your network through a 10Gb or greater connection, you might see reduced total bandwidth when using the Ubuntu client (v2023.3 or higher) versus the CentOS client (v2023.3 or higher).
Windows 10 Issues Issue Number SSENG-29069: On Windows 10 clients, when using TeraCopy to move large numbers of files to an Avid NEXIS Workspace (instead of using Windows Explorer), TeraCopy sometimes treats a file as a directory, and the Windows client displays an error that it cannot move the file. Avid strongly recommends not using TeraCopy.
Workaround: Use Windows Explorer or the Avid Data Migration Utility.
Issue Number SSENG-2571: On Windows 10 clients, automatic Windows driver updates can remove critical NIC driver settings needed for the correct functioning of the Avid Client.
Workaround: To prevent disruption of clients running Windows 10 (Professional and Enterprise), you can defer automatic driver updates as follows:
1. Right-click the “This PC” icon (formerly called “This Computer”).
2. Select Properties.
3. Select Advanced System Settings.
4. Click the Hardware tab, then click Device Installation Settings.
5. Select the option “No” to prevent downloading apps and icons automatically.
6. Click Save Changes.
Special Notes This section contains important information about the Avid NEXIS environment.
LDAP Requires ASCII User Names and Passwords The Avid implementation of LDAP (Lightweight Directory Access Protocol) requires that you restrict LDAP user names and passwords to ASCII. The LDAP/Avid NEXIS Account Synchronizer searches for groups and their users on an LDAP server and synchronizes (reconciles) user and group accounts by adding or removing users and/or groups from Avid NEXIS.
Fast User Switching Not Supported Fast User Switching is a Windows feature that allows multiple user accounts to log on to a computer simultaneously. Fast User Switching is enabled by default in Windows computers. The Fast User Switching feature and multiple concurrent logged on user modes are not supported in the Avid NEXIS environment. The Avid NEXIS software does not distinguish the different drive letters mapped to the same workspaces on the same computer. Conflicts appear in the following two scenarios:
When one user maps a drive letter to one workspace and another user maps the same drive letter to a
- different workspace
- When one user maps a workspace to one drive letter, and another user maps a different drive letter
for the same workspace